WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268310
[UnifiedPDF] Can't zoom out below scale 1
https://bugs.webkit.org/show_bug.cgi?id=268310
Summary
[UnifiedPDF] Can't zoom out below scale 1
Simon Fraser (smfr)
Reported
2024-01-29 10:30:04 PST
With UnifiedPDF you can't shrink the PDF below scale 1, which you could before.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 10:32:50 PST
<
rdar://problem/121866624
>
Simon Fraser (smfr)
Comment 2
2024-01-29 10:42:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23438
EWS
Comment 3
2024-01-29 21:11:08 PST
Committed
273725@main
(2fc8377fb290): <
https://commits.webkit.org/273725@main
> Reviewed commits have been landed. Closing PR #23438 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug