Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.mm
@@ -146,6 +146,8 @@ void PDFDocumentLayout::layoutSingleColumn(float availableWidth, float maxRowWid
 
         auto pageBounds = m_pageGeometry[i].normalizedBounds;
 
+        ALWAYS_LOG_WITH_STREAM(stream << "PDFDocumentLayout::layoutSingleColumn - page " << i << " bounds " << pageBounds);
+
         auto pageLeft = std::max<float>(std::floor((maxRowWidth - pageBounds.width()) / 2), 0);
         pageBounds.setLocation({ pageLeft, currentYOffset });
 
@@ -159,6 +161,8 @@ void PDFDocumentLayout::layoutSingleColumn(float availableWidth, float maxRowWid
 
     m_scale = std::max<float>(availableWidth / maxRowWidth, minScale);
     m_documentBounds = FloatRect { 0, 0, maxRowWidth, currentYOffset };
+
+    ALWAYS_LOG_WITH_STREAM(stream << "PDFDocumentLayout::layoutSingleColumn - document bounds " << m_documentBounds << " scale " << m_scale);
 }
 
 void PDFDocumentLayout::layoutTwoUpColumn(float availableWidth, float maxRowWidth)
